# streamlining-serverless-governance-aws-blog

./: .pre-commit-config.yaml  Makefile  README.md  app.py  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pr-serverless-service.yml
cdk/: pyproject.toml
cdk/blueprint/: constants.py  monitoring.py  secure_s3_construct.py  service_stack.py  sqs_lambda_s3_blueprint.py  sqs_redrive_construct.py  utils.py
cdk/blueprint/_redrive_lambda/: redrive_lambda.py
service/handlers/: handle_create_order.py  handle_sqs_batch.py  logic.py
service/handlers/models/: env_vars.py  sqs_item.py
service/handlers/utils/: observability.py
tests/: utils.py
tests/e2e/: test_create_order.py  test_sqs_orders.py
tests/integration/: conftest.py  test_create_order.py  test_feature_flags.py  test_sqs_orders.py
