[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blueprint-cdk"
version = "1.0"
description = "CDK code for deploying an SQS to lambda to S3 pattern with DLQ redrive"
authors = [
    { name = "Ran Isenberg", email = "ran.isenberg@ranthebuilder.cloud" }
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.13"
]
requires-python = ">=3.13"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
exclude = ["contrib", "docs", "tests"]

[tool.setuptools.package-data]
"*" = ["*.json"]
